_sass/_default.scss
.hidden {
  display: none !important;
}

.invisible {
  opacity: 0;
}

.fade {
  transition: opacity 0.3s;
}

html {
  height: 100%;
  background-color: $black;
}

strong {
  color: $white;
  font-weight: bold;
}

a {
  color: $white;
}

h1, h2, h3, h4, h5, h6 {
  color: $white;
  font-family: $heading-font;
  font-weight: bold;
  margin: 0 auto;
  line-height: 1.2;
  letter-spacing: 0.1rem;
}

h1 {
  font-size: 2.8rem;
  margin-bottom: 6rem;

  em {
    color: $red;
    text-decoration: underline;
  } 
}

h2 {
  font-size: 2.2rem;
  margin: 1.5rem auto;
}

h3 {
  font-size: 1.8rem;
}

body {
  background: linear-gradient(180deg, $dark-grey, $darker-grey 30rem);
  color: $light-grey;
  font-family: $body-font;
  font-size: 1.2rem;
  line-height: 1.6;
  text-align: center;

  > main {
    max-width: 60rem;
    margin: 0 auto;
    padding: 4rem 1rem 0;

    > p {
      margin-bottom: 6rem;
    }
  }

  > footer {
    margin-top: 4rem;
    color: $white;

    .logo {
      max-width: $footer-width;
      margin: 0 auto;
      padding: 1rem 0;
      background-color: #1a1b1c;
      border-radius: $border-radius;
      font-weight: bold;
      text-transform: uppercase;
      text-align: center;
      position: relative;

      img {
        max-width: 18rem;
      }
    }

    > main {
      margin-top: -3rem;
      padding: 3rem 0 1rem;
      background-color: $black;

      .share {
        max-width: $footer-width;
        margin: 2rem auto;
        display: flex;

        a {
          flex: 1;
        }
      }

      hr {
        max-width: $footer-width;
        border: 1px solid #2b2c2e;
      }

      .contact {
        margin: 2rem auto;
        font-size: 0.8rem;
        font-weight: bold;
        text-transform: uppercase;
        text-align: center;

        a {
          color: #858585;
        }
      }
    }
  }

  section {
    max-width: 45rem;
    margin: 0 auto;
  }
}

body.error {
  h1 {
    font-size: 4rem;
    margin-bottom: 0;
  }
  
  p {
    margin-bottom: 0;
  }
}

input {
  flex: 1;
  border: none;
  border-radius: $border-radius;
  font-size: 1.1rem;
  padding: 1rem;
  margin-bottom: 0.5rem;
  font-weight: bold;
}

input[type="submit"] {
  color: $white;
  background: $red;
  font-size: 1.4rem;
  text-transform: uppercase;
  letter-spacing: 0.1rem;
  padding: 1.2rem;

  &:hover {
    cursor: pointer;
  }
}

.petition {
  margin-bottom: 6rem;
  display: flex;
  color: $white;
  text-align: left;

  .left {
    flex: 6;
    margin-right: 2rem;
  }

  .right {
    flex: 7;
  }

  aside {
    position: relative;

    .politician {
      min-height: 24rem;
      border-radius: 1rem;
      background-position: center center;
      background-repeat: no-repeat;
      background-size: cover;
      filter: grayscale(100%);
    }

    &:after {
      content: '';
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      border-radius: 1rem;
      background-image: linear-gradient(-85deg,#f35353,#481e17);
      mix-blend-mode: overlay;
      opacity: 0.9;
    }
  }

  p {
    margin: 1rem 0;
    font-size: 1.08rem;
  }

  .disclaimer {
    color: $light-grey;
    font-size: 0.8rem;
  }

  .message {
    color: $red;
    font-size: 0.8rem;
  }

  form {
    display: flex;
    flex-wrap: wrap;

    input[name="member[email]"] {
      flex: 3;
    }

    input[name="member[postcode]"] {
      min-width: 10%;
      margin-left: 0.5rem;
    }
  }
}

button {
  width: 96%;
  padding: 0.8rem;
  background-color: $grey;
  color: $white;
  border: none;
  border-radius: 0.3rem;
  font-size: 0.8rem;
  font-weight: bold;
  text-transform: uppercase;
  text-align: center;
  line-height: 2;

  &:hover {
    cursor: pointer;
  }

  .facebook & {
    background-color: $facebook-blue;
  }

  .twitter & {
    background-color: $twitter-blue;
  }

  svg {
    max-width: 1.6rem;
    max-height: 1.6rem;
    margin: -0.2rem 0.4rem 0 0;
    vertical-align: middle;
  }
}

.overlay {
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 9999;
  background: $transparent-black;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  display: table;

  .cell {
    display: table-cell;
    vertical-align: middle;
  }

  .modal {
    main {
      border-radius: $border-radius $border-radius 0 0;
      background-color: $near-black;
      padding: 2rem;

      h2 {
        margin-top: 0;
      }
    }

    footer {
      background-color: #2a2a2a;
      border-radius: 0 0 $border-radius $border-radius;
      padding: 2rem;

      .share {
        display: flex;
        flex-wrap: nowrap;

        a {
          flex: 3;

          &:last-child {
            flex: 2;
          }
        }
      }
    }
  }
}

